# range-based-trader

./: .env.example  .gitignore  CLAUDE.md  DESIGN_RULES.md  README.md  pyproject.toml  results-try.csv  results_custom.csv  tickers.txt  tickers_custom.txt
.claude/: settings.json  settings.local.json
.claude/agents/: doc-generator.md
results/: nasdaq100.csv  personal_compress.csv  personal_context.csv  personal_earnings.csv  personal_gaps.csv  personal_setup.csv  tmp.csv  tmp2.csv
src/range_scanner/: __init__.py  __main__.py  charts.py  cli.py  config.py  context.py  data.py  indicators.py  models.py  output.py  reasoning.py  scoring.py  setup.py  state.py  structure.py
src/range_scanner/dashboard/: app.py
src/range_scanner/dashboard/pages/: backtest.py  charts.py  detail.py  scanner.py  settings.py
tests/: test_indicators.py  test_scoring.py  test_structure.py
universes/: ai_robotics.txt  biotech.txt  cannabis.txt  clean_energy.txt  consumer_staples.txt  defense_aerospace.txt  dividend_aristocrats.txt  etfs.txt  high_short_interest.txt  international_adrs.txt  ipo_recent.txt  low_volatility.txt  mega_caps.txt  meme_speculative.txt  nasdaq100.txt  regional_banks.txt  reits.txt  sector_etfs.txt  semiconductors.txt  software_cloud.txt  sp500.txt  utilities.txt
validation/: backtest.py  labels.csv  validate.py
