[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "range-scanner"
version = "0.1.0"
description = "Stock range-bound structure scanner"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "requests>=2.28",
    "pydantic>=2.0",
    "typer>=0.9",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "mplfinance>=0.12",
    "matplotlib>=3.7",
    "yfinance>=0.2",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
range-scanner = "range_scanner.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/range_scanner"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
